--- a/index.html
+++ b/index.html
@@ -299,14 +299,14 @@
   <!-- ABOUT SECTION -->
 <section id="about">
   <div class="about">
-    <img src="profile.jpg" alt="Profile photo">
+    <img src="pic/profile.jpg" alt="Profile photo">
 
     <div class="about-text">
       <h1>Zhengze Yu</h1>
       <p class="about-subtitle">B.E. in Artificial Intelligence, University of Chinese Academy of Sciences (UCAS)</p>
 
       <div class="tags">
-        <span>Multimodal Learning</span>
+        <span>Generative AI</span>
         <span>Video Editing</span>
         <span>Vision-Language Alignment</span>
       </div>
@@ -320,7 +320,7 @@
           Email
         </a>
 
-        <a href="cv.pdf">
+        <a href="pdf/Zhengze_Yu_CV (4).pdf">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0070f3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
             <polyline points="14 2 14 8 20 8"/>
@@ -335,17 +335,17 @@
       <b>✨Welcome to my page!</b> 
     </p>
     <p>
-      I work on <b>Video Generation</b>, with a focus on <b>Multimodal Learning</b>, <b>Video Editing</b> and <b>Vision-Language Alignment</b> for controllable video transformation.
+      I work on <b>Video Generation</b>, with a focus on <b>Video Editing</b> and <b>Vision-Language Alignment</b> for controllable video transformation.
     </p>
    <p>
   I have been fortunate to complete a research internship at the <b>Institute of Automation, Chinese Academy of Sciences (CASIA)</b>, where I explore multimodal generation and video understanding. My recent research involve <b>attention-injection-based video editing</b> and <b>cross-modal alignment frameworks</b>.
 </p>
 <p>
-  I am very grateful to be advised by <b>🎓Prof. Junyu Gao</b>, whose guidance has greatly shaped my research in video generation and alignment methods.
+  I am very grateful to be advised by <b>🎓Prof. Changsheng Xu</b> and <b>🎓Prof. Junyu Gao</b>, whose guidance has greatly shaped my research in video generation and alignment methods.
 </p>
 
     <p>
-      For more details, please check my <a href="cv.pdf"><b>CV</b></a> or reach out via <a href="mailto:yuzhengze21@mails.ucas.ac.cn"><b>email</b></a>.
+      For more details, please check the <b>Research</b> and <b>Projects</b> on my website.
     </p>
   </div>
 </section>
@@ -368,124 +368,133 @@
 </html>
 
 
-  <!-- RESEARCH SECTION -->
+ <!-- RESEARCH SECTION -->
 <section id="research">
   <h2>Research</h2>
-  <div class="research-grid">
-    <!-- Project 1 -->
-    <div class="research-card" onclick="openModal('project1')">
-      <img src="img/video_editing.jpg" alt="Video Editing Project">
-      <div class="research-title">Video Editing Based on Attention Injection</div>
-    </div>
 
-    <!-- Project 2 -->
-    <div class="research-card" onclick="openModal('project2')">
-      <img src="img/text_compression.jpg" alt="Text Compression Project">
-      <div class="research-title">Multilingual Text Compression via Subword Tokenization</div>
-    </div>
+  <div class="research-grid"> 
+    <!-- Research 1 --> 
+     <a href="pdf/Gra.pdf" target="_blank" class="research-card"> 
+      <img src="pic/all_combined_compressed.jpg" alt="Video Editing Project"> 
+      <div class="research-title">Multi-modal Video Editing with Attention Injection </div> 
+    </a>
 
-    <!-- 可继续添加更多项目卡片 -->
+
+    <!-- Research 2 -->
+    <a href="pdf/Video_Generation_Models_and_Optimization_Techniques.pdf" target="_blank" class="research-card">
+      <img src="pic/all_grid_3x3.png" alt="Text Compression Project">
+      <div class="research-title">Video Generation Models and Optimization Techniques</div>
+    </a>
+
+    <!-- 可继续添加更多研究卡片 -->
+    <!--
+    <a href="pdfs/your_research.pdf" target="_blank" class="research-card">
+      <img src="pic/your_image.png" alt="Research Project">
+      <div class="research-title">Your Research Title</div>
+    </a>
+    -->
   </div>
 </section>
 
-<!-- MODALS -->
-<div id="project1" class="modal">
-  <div class="modal-content">
-    <span class="close" onclick="closeModal('project1')">&times;</span>
-    <h3>Video Editing Based on Attention Injection</h3>
-    <p>Multi-stage cross-modal video editing framework integrating text, image, and video. This project explores attention-injection methods for controllable video transformations.</p>
-    <img src="img/video_editing_detail.jpg" alt="Video Editing Detail">
-  </div>
-</div>
-
-<div id="project2" class="modal">
-  <div class="modal-content">
-    <span class="close" onclick="closeModal('project2')">&times;</span>
-    <h3>Multilingual Text Compression via Subword Tokenization</h3>
-    <p>Applied BPE for multilingual compression and token representation optimization. Focused on improving token efficiency and cross-lingual alignment.</p>
-    <img src="img/text_compression_detail.jpg" alt="Text Compression Detail">
-  </div>
-</div>
-<script>
-function openModal(id) {
-  document.getElementById(id).style.display = "block";
-}
-function closeModal(id) {
-  document.getElementById(id).style.display = "none";
-}
-// 点击模态窗口外部关闭
-window.onclick = function(event) {
-  const modals = document.querySelectorAll('.modal');
-  modals.forEach(modal => {
-    if (event.target == modal) {
-      modal.style.display = "none";
-    }
-  });
-}
-</script>
 
     <!-- PROJECT -->
   <!-- PROJECTS SECTION -->
 <section id="projects">
   <h2>Projects</h2>
+
   <div class="research-grid">
-    <div class="research-card" onclick="openModal('proj1')">
-      <img src="img/project_video_editing.jpg" alt="Video Editing Project">
-      <div class="research-title">Video Editing Based on Attention Injection</div>
-    </div>
+    <!-- Project 1 -->
+    <a href="pdf/Cross_Domain_Multilingual_Text_Clustering_Analysis.pdf" target="_blank" class="research-card">
+      <img src="pic/project1.png" alt="Video Editing Project">
+      <div class="research-title">Cross-Domain Multilingual Text Clustering Analysis</div>
+    </a>
 
-    <div class="research-card" onclick="openModal('proj2')">
-      <img src="img/project_text_compression.jpg" alt="Text Compression Project">
+    <!-- Project 2 -->
+    <a href="pdf/Multilingual_Text_Compression_via_Subword_Tokenization.pdf" target="_blank" class="research-card">
+      <img src="pic/work.png" alt="Text Compression Project">
       <div class="research-title">Multilingual Text Compression via Subword Tokenization</div>
-    </div>
+    </a>
 
-    <!-- 你可以继续添加更多项目 -->
+  
   </div>
 </section>
 
-<!-- PROJECT MODALS -->
-<div id="proj1" class="modal">
-  <div class="modal-content">
-    <span class="close" onclick="closeModal('proj1')">&times;</span>
-    <h3>Video Editing Based on Attention Injection</h3>
-    <p>
-      Multi-stage cross-modal video editing framework integrating text, image, and video.
-      This project explores attention-injection methods for controllable video transformations.
-    </p>
-    <img src="img/project_video_editing_detail.jpg" alt="Video Editing Detail">
-  </div>
-</div>
+<style>
+/* --- clean link style --- */
+.research-card {
+  display: block;
+  text-decoration: none;        /* 去掉下划线 */
+  color: inherit;               /* 继承文字颜色（不再蓝色） */
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
 
-<div id="proj2" class="modal">
-  <div class="modal-content">
-    <span class="close" onclick="closeModal('proj2')">&times;</span>
-    <h3>Multilingual Text Compression via Subword Tokenization</h3>
-    <p>
-      Applied BPE for multilingual compression and token representation optimization,
-      focusing on improving token efficiency and cross-lingual alignment.
-    </p>
-    <img src="img/project_text_compression_detail.jpg" alt="Text Compression Detail">
-  </div>
-</div>
+.research-card:hover {
+  transform: translateY(-3px);  /* 悬停微动效果，可选 */
+  box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+}
+
+/* --- grid layout --- */
+.research-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.research-title {
+  text-align: center;
+  font-weight: 500;
+  margin-top: 8px;
+}
+
+.research-card img {
+  width: 100%;
+  height: 180px;           /* 固定高度 */
+  object-fit: contain;     /* 不裁剪，完整显示 */
+  background-color: #fff;
+  border-radius: 12px;
+}
+
+</style>
+
+
 
   <!-- CONTACT -->
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="yuzhengze21@mails.ucas.ac.cn">yuzhengze21@mails.ucas.ac.cn</a></p>
-    <p>CV: <a href="cv.pdf">Download Here</a></p>
-  </section>
+<section id="contact">
+  <h2>Contact</h2>
+  <p>Email: <a href="mailto:yuzhengze21@mails.ucas.ac.cn" class="plain-link">yuzhengze21@mails.ucas.ac.cn</a></p>
+  <p>CV: <a href="pdf/Zhengze_Yu_CV (4).pdf" class="plain-link" target="_blank">Download Here</a></p>
+</section>
 
-  <script>
-    // Fade in sections when scrolling
-    const sections = document.querySelectorAll("section");
-    const observer = new IntersectionObserver(entries => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) entry.target.classList.add("visible");
-      });
-    }, { threshold: 0.1 });
-    sections.forEach(sec => observer.observe(sec));
-  </script>
+<style>
+  /* 去掉默认链接样式 */
+  .plain-link {
+    color: inherit;          /* 使用当前文字颜色 */
+    text-decoration: none;   /* 去掉下划线 */
+    font-weight: 500;        /* 稍微加粗，保持可读性 */
+  }
+/* 仅让 CV 链接始终显示与文字同色的下划线 */
+#contact a[href$="cv.pdf"] {
+  text-decoration: underline;  /* 始终有下划线 */
+  text-decoration-color: currentColor; /* 下划线颜色与文字一致 */
+}
+  .plain-link:hover {
+    text-decoration: underline;  /* 鼠标悬停时可加轻微下划线或阴影，更自然 */
+  }
+</style>
+
+<script>
+  // Fade in sections when scrolling
+  const sections = document.querySelectorAll("section");
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) entry.target.classList.add("visible");
+    });
+  }, { threshold: 0.1 });
+  sections.forEach(sec => observer.observe(sec));
+</script>
 </body>
 </html>
+
 
 
