--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
     }
 
     /* -------- NAVBAR -------- */
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: white;
-      border-bottom: 1px solid #eee;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.05);
-      z-index: 1000;
-    }
+   header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: white;
+  border-bottom: 1px solid #eee;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.05);
+  z-index: 1000;
+  height: 60px; /* 固定高度，便于手机端计算 */
+}
 
     .container {
       max-width: 960px;
@@ -62,26 +63,20 @@
       color: #0070f3;
     }
 
-    @media (max-width: 600px) {
-      .container {
-        padding: 0 20px;
-      }
-      .nav-container {
-        flex-wrap: wrap;
-        gap: 20px;
-      }
-      nav {
-        flex-wrap: wrap;
-        gap: 16px;
-      }
-    }
+    @media (max-width: 700px) {
+  section {
+    padding-top: 120px; /* 手机端更大间距 */
+  }
+}
 
     /* -------- SECTIONS -------- */
-    section {
-      max-width: 960px;
-      margin: 0 auto;
-      padding: 100px 24px 60px 24px;
-    }
+   /* 给所有 section 顶部增加空隙，避免固定 header 遮挡 */
+section {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 100px 24px 60px 24px; /* desktop */
+  scroll-margin-top: 70px; /* anchor 滚动时顶部留空 */
+}
 
     h2 {
       font-size: 22px;
@@ -203,12 +198,12 @@
         max-width: 100%;
       }
     }
-    /* Research Grid */
+   /* -------- RESEARCH / PROJECT GRID -------- */
 .research-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+  grid-template-columns: repeat(4, 1fr); /* 默认桌面端 4 列 */
   gap: 20px;
-  margin-top: 24px;
+  margin-top: 20px;
 }
 
 .research-card {
@@ -220,22 +215,31 @@
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
-.research-card:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 8px 20px rgba(0,0,0,0.12);
-}
-
 .research-card img {
   width: 100%;
-  height: 140px;
-  object-fit: cover;
+  height: 180px;
+  object-fit: contain;
+  background-color: #fff;
+  border-radius: 12px;
 }
 
 .research-title {
-  padding: 12px;
-  font-weight: 600;
-  font-size: 15px;
   text-align: center;
+  font-weight: 500;
+  margin-top: 8px;
+}
+
+/* 手机端一列，占满屏幕 */
+@media(max-width: 700px) {
+  .research-grid {
+    grid-template-columns: 1fr; 
+  }
+  .research-card img {
+    height: auto; /* 高度自适应 */
+  }
+  .research-title {
+    font-size: 16px;
+  }
 }
 
 /* Modals */
