--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
       transform: translateY(20px);
       transition: opacity 0.6s ease, transform 0.6s ease;
     }
+    section#about {
+  padding-top: 140px; /* 头像上方空白 */
+}
+
     section.visible { opacity: 1; transform: translateY(0); }
     h2 {
       font-size: 22px;
