--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
           <span>Vision-Language Alignment</span>
         </div>
         <div class="contact-buttons">
-          <a href="mailto:yuzhengze21@mails.ucas.ac.cn">
+          <a href="mailto:zhengze347@outlook.com">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0070f3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M4 4h16v16H4z" fill="none"/>
               <polyline points="22,6 12,13 2,6"/>
@@ -271,13 +271,13 @@
 
   <!-- NEWS SECTION -->
   <section id="news">
-    <h2>News📢</h2>
+    <h2>News</h2>
     <ul>
-      <li>[Dec, 2025] 🎄🎄🎄Wishing everyone a <b>Merry Christmas</b>🎄🎄🎄</li>
-      <li>[Jul, 2025] Successfully <b>graduated with a B.E. in Artificial Intelligence</b> from UCAS.</li>
-      <li>[Jun, 2025] Completed my <b>graduation thesis</b> on attention-injection-based video editing and cross-modal alignment frameworks.</li>
-      <li>[May, 2025] Conducted a <b>research internship</b> at the Institute of Automation, CAS, focusing on multimodal video generation and understanding.</li>
-      <li>[Mar, 2025] Participated in a <b>text data mining project</b>, exploring large-scale multimodal datasets and vision-language alignment.</li>
+      <li>[Jan 2026] 🎆🎉 Happy New Year! 🎉🎆</li>
+      <li>[Jul 2025] Successfully <b>graduated with a B.E. in Artificial Intelligence</b> from UCAS.</li>
+      <li>[Jun 2025] Completed my <b>graduation thesis</b> on attention-injection-based video editing and cross-modal alignment frameworks.</li>
+      <li>[May 2025] Conducted a <b>research internship</b> at the Institute of Automation, CAS, focusing on multimodal video generation and understanding.</li>
+      <li>[Mar 2025] Participated in a <b>text data mining project</b>, exploring large-scale multimodal datasets and vision-language alignment.</li>
     </ul>
   </section>
 
@@ -314,7 +314,7 @@
   <!-- CONTACT SECTION -->
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:yuzhengze21@mails.ucas.ac.cn" class="plain-link">yuzhengze21@mails.ucas.ac.cn</a></p>
+    <p>Email: <a href="mailto:zhengze347@outlook.com" class="plain-link">zhengze347@outlook.com</a></p>
     <p>CV: <a href="pdf/Zhengze_Yu_CV (4).pdf" class="plain-link" target="_blank">Download Here</a></p>
   </section>
 
