--- a/index.html
+++ b/index.html
@@ -139,13 +139,21 @@
     .contact-buttons a svg { margin-right: 6px; }
 
     /* 单独 intro 块 */
-    .intro-block {
-      max-width: 720px;
-      margin: 24px 0 0 0px;
-      font-size: 15px;
-      line-height: 1.7;
-      color: #333;
-    }
+ .intro-block {
+  max-width: 660px;
+  font-size: 15px;
+  line-height: 1.7;
+
+  text-align: justify;
+  text-justify: inter-word;
+
+  hyphens: auto;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+
+  letter-spacing: 0.01em;
+}
+
     @media (max-width: 900px) {
       .about { flex-direction: column; align-items: center; }
       .intro-block { margin-left: 0; text-align: center; max-width: 100%; }
