--- a/index.html
+++ b/index.html
@@ -153,6 +153,29 @@
 
   letter-spacing: 0.01em;
 }
+/* -------- NEWS TYPOGRAPHY (Same System as Intro) -------- */
+#news ul {
+  max-width: 660px;          /* 和 intro-block 对齐 */
+  padding-left: 0;
+  list-style: none;
+}
+
+#news li {
+  font-size: 15px;
+  line-height: 1.7;
+  color: #333;
+
+  text-align: justify;
+  text-justify: inter-word;
+
+  hyphens: auto;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+
+  letter-spacing: 0.01em;
+
+  margin-bottom: 10px;
+}
 
     @media (max-width: 900px) {
       .about { flex-direction: column; align-items: center; }
