--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
       <p><b>✨Welcome to my page!</b></p>
       <p>I work on <b>Video Generation</b>, with a focus on <b>Video Editing</b> and <b>Vision-Language Alignment</b> for controllable video transformation.</p>
       <p>I have been fortunate to complete a research internship at the <b>Institute of Automation, Chinese Academy of Sciences (CASIA)</b>, where I explore multimodal generation and video understanding. My recent research involve <b>attention-injection-based video editing</b> and <b>cross-modal alignment frameworks</b>.</p>
-      <p>I am very grateful to be advised by <b>🎓Prof. Changsheng Xu</b> and <b>🎓Prof. Junyu Gao</b>, whose guidance has greatly shaped my research in video generation and alignment methods.</p>
-      <p>For more details, please check the <b>Research</b> and <b>Projects</b> on my website.</p>
+      <p>I am very grateful to be advised by <a href="https://scholar.google.com/citations?user=hI9NRDkAAAAJ&hl=zh-CN&oi=ao" class="plain-link"><b>🎓Prof. Changsheng Xu</b></a> and <a href="https://scholar.google.com/citations?hl=zh-CN&user=y1nOY24AAAAJ" class="plain-link"><b>🎓Prof. Junyu Gao</b></a>, whose guidance has greatly shaped my research in video generation and alignment methods.</p>
+      <p>For more details, please check the <a href="https://zhengze-yu.github.io/#research" class="plain-link"><b>Research</b></a> and <a href="https://zhengze-yu.github.io/#projects" class="plain-link"><b>Projects</b></a> on my website.</p>
     </div>
   </section>
 
