--- a/index.html
+++ b/index.html
@@ -234,11 +234,13 @@
       background-color: #fff;
     }
     .research-title {
-      padding: 12px;
-      font-weight: 600;
-      font-size: 15px;
-      text-align: center;
-    }
+  padding: 12px 14px;   /* 左右稍微多一点，像论文卡片 */
+  font-weight: 600;
+  font-size: 15px;
+  text-align: left;
+  line-height: 1.4;
+}
+
     @media(max-width: 900px) {
       .research-grid { grid-template-columns: 1fr; }
       .research-card img { height: auto; }
@@ -293,7 +295,7 @@
               <polyline points="22,6 12,13 2,6"/>
             </svg>Email
           </a>
-          <a href="pdf/Zhengze_Yu_CV (6).pdf">
+          <a href="pdf/Zhengze_Yu_CV (4).pdf">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0070f3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
               <polyline points="14 2 14 8 20 8"/>
@@ -318,9 +320,9 @@
     <ul>
       <li>[Jan 2026] 🎆🎉 Happy New Year! 🎉🎆</li>
       <li>[Jul 2025] Successfully <b>graduated with a B.E. in Artificial Intelligence</b> from UCAS.</li>
-      <li>[Jun 2025] Completed my <b>graduation thesis</b> on attention-injection-based video editing and cross-modal alignment frameworks.</li>
+      <li>[Jun 2025] Completed my <b>undergraduate thesis</b> on attention-injection-based video editing and cross-modal alignment frameworks.</li>
       <li>[May 2025] Conducted a <b>research internship</b> at the Institute of Automation, CAS, focusing on multimodal video generation and understanding.</li>
-      <li>[Mar 2025] Participated in a <b>text data mining project</b>, exploring large-scale multimodal datasets and vision-language alignment.</li>
+      <li>[Mar 2025] Worked on language modeling through two NLP projects: <b>Cross-Domain Multilingual Text Clustering Analysis</b> and <b>Multilingual Text Compression via Subword Tokenization</b>.
     </ul>
   </section>
 
@@ -330,11 +332,12 @@
     <div class="research-grid">
       <a href="pdf/Gra.pdf" target="_blank" class="research-card">
         <img src="pic/all_combined_compressed.jpg" alt="Video Editing Project">
-        <div class="research-title">Multi-modal Video Editing with Attention Injection</div>
+        <div class="research-title">Multi-modal Video Editing with Attention Injection (Bachelor's thesis, in Chinese)</div>
       </a>
       <a href="pdf/Video_Generation_Models_and_Optimization_Techniques.pdf" target="_blank" class="research-card">
         <img src="pic/all_grid_3x3.png" alt="Text Compression Project">
-        <div class="research-title">Video Generation Models and Optimization Techniques</div>
+        <div class="research-title">Video Generation Models and Optimization Techniques 
+        <br>  (English Version)</div>
       </a>
     </div>
   </section>
@@ -345,11 +348,11 @@
     <div class="research-grid">
       <a href="pdf/Cross_Domain_Multilingual_Text_Clustering_Analysis.pdf" target="_blank" class="research-card">
         <img src="pic/project1.png" alt="Video Editing Project">
-        <div class="research-title">Cross-Domain Multilingual Text Clustering Analysis</div>
+        <div class="research-title">Cross-Domain Multilingual Text Clustering Analysis (English Version)</div>
       </a>
       <a href="pdf/Multilingual_Text_Compression_via_Subword_Tokenization.pdf" target="_blank" class="research-card">
         <img src="pic/work.png" alt="Text Compression Project">
-        <div class="research-title">Multilingual Text Compression via Subword Tokenization</div>
+        <div class="research-title">Multilingual Text Compression via Subword Tokenization <br>(English Version)</div>
       </a>
     </div>
   </section>
@@ -358,7 +361,7 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:zhengze347@outlook.com" class="plain-link">zhengze347@outlook.com</a></p>
-    <p>CV: <a href="pdf/Zhengze_Yu_CV (6).pdf" class="plain-link" target="_blank">Download Here</a></p>
+    <p>CV: <a href="pdf/Zhengze_Yu_CV (4).pdf" class="plain-link" target="_blank">Download Here</a></p>
   </section>
 
   <script>
