--- a/index.html
+++ b/index.html
@@ -318,9 +318,9 @@
   <section id="news">
     <h2>News</h2>
     <ul>
-      <li>[Jan 2026] 🎆🎉 Happy New Year! 🎉🎆</li>
+      <li>[Jan 2026] 🎆🎉 <b>Happy New Year!</b> 🎉🎆</li>
       <li>[Jul 2025] Successfully <b>graduated with a B.E. in Artificial Intelligence</b> from UCAS.</li>
-      <li>[Jun 2025] Completed my <b>undergraduate thesis</b> on attention-injection-based video editing and cross-modal alignment frameworks.</li>
+      <li>[Jun 2025] Completed my <b>Bachelor's Thesis</b> on attention-injection-based video editing and cross-modal alignment frameworks.</li>
       <li>[May 2025] Conducted a <b>research internship</b> at the Institute of Automation, CAS, focusing on multimodal video generation and understanding.</li>
       <li>[Mar 2025] Worked on language modeling through two NLP projects: <b>Cross-Domain Multilingual Text Clustering Analysis</b> and <b>Multilingual Text Compression via Subword Tokenization</b>.
     </ul>
